@@ -1,7 +1,7 @@
 include $(top_srcdir)/examples/Makefile.am_fragment
 
 # build the executable but don't install it
-noinst_PROGRAMS = text_rotate toy-text user-font
+noinst_PROGRAMS = text-rotate toy-text user-font
 
 text_rotate_SOURCES = text-rotate.cc
 toy_text_SOURCES=toy-text.cc
